Fix text wrap behavior in Mastodon shortcode
This should prevent the <figure> from breaking outside the max width of
the <article> if there are long unbreakable URLs in the Mastodon post,
for example.

--- a/sass/css/_shortcodes.scss
+++ b/sass/css/_shortcodes.scss
@@ -15,8 +15,9 @@ figure.mastodon-post {
     }
 
     blockquote {
-        border: unset;
         padding: unset;
+        border: unset;
+        overflow-wrap: anywhere;
 
         &::before {
             content: none;
